--- a/locale/zh-CN/pyhightech.cfg
+++ b/locale/zh-CN/pyhightech.cfg
@@ -1,4 +1,14 @@
-﻿[recipe-name]
+﻿#汉化：aotix，基于咸鱼拓展而来。
+
+[mod-name]
+pyhightech=Py之高新科技
+pyhightechgraphics=Py之高新科技贴图包
+
+[mod-description]
+pyhightech=改善和提高游戏中的电子产品难度。
+pyhightechgraphics=包含Py之高新科技贴图。
+
+[recipe-name]
 urea-decomposition=尿素分解
 fluidize-coke=焦炭流态化
 tall-oil-separation=高油分离
@@ -10,76 +20,76 @@ heavy-p-type=重掺杂P型半导体
 crusher-ree=破碎稀土矿石
 milling-ree=研磨稀土粉末
 cumene-distilation=异丙基苯蒸馏
-rendering=基皮尔宰杀与解体
+rendering=海蝎宰杀与解体
 antimatter-fusion=慢反应物质
 steam-exchange5=蒸汽交换 5
-pa-aromatics=生产 芳烃
-pa-benzene=生产 苯
-pa-chromium=生产 铬
-pa-coal=生产 煤
-pa-niobium=生产 铌
-pa-propene=生产 丙烯
-pa-silicon=生产 硅
-pa-uranium=生产 铀矿
+pa-aromatics=生产芳烃
+pa-benzene=生产苯
+pa-chromium=生产铬
+pa-coal=生产煤
+pa-niobium=生产铌
+pa-propene=生产丙烯
+pa-silicon=生产硅
+pa-uranium=生产铀矿
 pa-uranium-235=浓缩铀
-pa-aluminium=生产 铝
-pa-boron=生产 硼
-pa-cobalt=生产 钴
+pa-aluminium=生产铝
+pa-boron=生产硼
+pa-cobalt=生产钴
 pa-diamond=制作钻石
-pa-gold=生产 金
-pa-helium=生产 氦
-pa-hydrogen=生产 氢
-pa-molybdenum=生产 钼
-pa-nickel=生产 镍
-pa-oxygen=生产 氧
-pa-silver=生产 银
-pa-vanadium=生产 钒
-pa-zinc=生产 锌
-random-science-pack=随机研究包
-methane-combustion=将甲烷转化成550ºC的燃烧混合物。
-benzene-combustion=将烷转化为520℃的燃烧混合物。
-tall-oil-combustion=将烷转化为600℃的燃烧混合物。
+pa-gold=生产金
+pa-helium=生产氦
+pa-hydrogen=生产氢
+pa-molybdenum=生产钼
+pa-nickel=生产镍
+pa-oxygen=生产氧
+pa-silver=生产银
+pa-vanadium=生产钒
+pa-zinc=生产锌
+random-science-pack=分类研究包
+methane-combustion=将甲烷转化成 (__1__°C)的燃烧混合物。
+benzene-combustion=将苯转化为 (__1__°C)的燃烧混合物。
+tall-oil-combustion=将焦油转化为 (__1__°C)的燃烧混合物。
 nexelit-battery-recharge=蓝坷垃电池充能
 
 [recipe-description]
 
 
 [item-group-name]
-py-hightech=PY之高新科技
+py-hightech=Py之高新科技
 
 [item-name]
-phosphate-rock=磷矿
+phosphate-rock=磷岩
 rare-earth-ore=稀土矿
-clay=粘土
+clay=黏土
 melamine=三聚氰胺
 melamine-resin=三聚氰胺树脂
 urea=尿素
 ceramic=陶瓷
-inductor1=电感器 1
-inductor2=电感器 2
-inductor3=电感器 3
-capacitor1=电容器 1
-capacitor2=电容器 2
-capacitor3=电容器 3
-resistor1=电阻器 1
-resistor2=电阻器 2
-resistor3=电阻器 3
+inductor1=空心电感器
+inductor2=环形电感器
+inductor3=高频贴片电感器
+capacitor1=陶瓷电容器
+capacitor2=电解电容器
+capacitor3=多层贴片电容器
+resistor1=高功率电阻器
+resistor2=中功率电阻器
+resistor3=低功率电阻器
 graphite=石墨
-valve=电子管
+vacuum-tube=真空管
 diode=二极管
 diode3=贴片二极管
 transistor=晶体管
 microchip=微晶片
 fiberboard=纤维板
 formica=塑料装饰板
-pcb1=印刷电路基板 1
-pcb2=印刷电路基板 2
-pcb3=印刷电路基板 3
+pcb1=印刷电路基板1
+pcb2=印刷电路基板2
+pcb3=印刷电路基板3
 pcb3-2=安装的电路基板
-pcb4=印刷电路基板 4
-electronic-circuit=电路板 1
-advanced-circuit=电路板 2
-processing-unit=电路板 3
+pcb4=印刷电路基板4
+electronic-circuit=简易电路板1
+advanced-circuit=复杂电路板2
+processing-unit=高科技电路板3
 powdered-phosphate-rock=磷矿粉
 light-n=轻掺杂N型半导体
 heavy-n=重掺杂N型半导体
@@ -101,7 +111,7 @@ glass-fiber=玻璃纤维
 bisphenol-a=双酚 A
 epoxy=环氧树脂
 fiberglass=玻璃纤维板
-pdms=聚二甲硅氧烷
+pdms=聚二甲基硅氧烷
 nic-core=镍核心
 pdms-graphene=石墨烯基质
 graphene-sheet=石墨烯片
@@ -111,7 +121,7 @@ processor=处理器
 phosphate-glass=磷酸盐玻璃
 high-flux-core=高磁密铁芯
 stone-wool=岩棉
-re-tin=再锡合金
+re-tin=稀土锡合金
 diode-core=二极管核心
 capacitor-core=电容器核心
 capacitor-termination=电容器终端电阻
@@ -125,42 +135,42 @@ nanochip=纳米芯片
 raw-fiber=粗纤维
 fiber=纤维
 micro-fiber=微纤维
-sub-denier-microfiber=纳米级微纤维
+sub-denier-microfiber=次旦微纤维
 resorcinol=间苯二酚
-rf-gel=间苯二酚-甲醛凝胶
-clean-rf-gel=清晰的间苯二酚-甲醛凝胶
+rf-gel=RF射频凝胶
+clean-rf-gel=清洁RF射频凝胶
 aerogel=气凝胶
 carbon-aerogel=碳气凝胶
-kondo-substrate=康多尔基板
-kondo-core=康多尔核心
-kondo-processor=康多尔处理器
+kondo-substrate=近藤基板
+kondo-core=近藤核心
+kondo-processor=近藤处理器
 heavy-fermion=重费米子材料
 crco-alloy=钴铬合金
-nxag-matrix=铌-银矩阵
+nxag-matrix=蓝坷垃银矩阵
 paradiamatic-resistor=聚合电阻器
 zinc-acetate=乙酸锌
 dry-ralesia=干若雷莎
 ralesia-powder=若雷莎粉
 zinc-nanocompound=锌纳米化合物
 zinc-nanocomplex=锌纳米复合物
-zno-nanoparticles=氧化锌纳米粒子
+zno-nanoparticles=氧化锌纳米颗粒
 csle-diode=截面发光二极管
 ndfeb-alloy=钕铁硼合金
 ndfeb-powder=钕铁硼粉末
-re-magnet=稀土磁体
+re-magnet=钕磁体
 sc-substrate=超导体基片
 superconductor=超导体
 fault-current-inductor=故障电流感应器
-nanocrystaline-core=纳米核心
+nanocrystaline-core=纳米晶核心
 supercapacitor=超级电容器
 supercapacitor-core=超级电容器核心
 supercapacitor-shell=超级电容器外壳
 intelligent-unit=智能单元
-zipir-carcass=基皮尔尸体
+zipir-carcass=海蝎尸体
 bones=骨头
 skin=皮肤
 meat=肉
-py-fertilizer=肥料
+py-fertilizer=py肥料
 rayon=人造纤维丝
 blood-meal=血粉
 nylon=尼龙
@@ -192,27 +202,29 @@ antimatter=反物质
 crystallographic-substrate=结晶基底
 proton-donor=质子供体
 proton-receiver=质子接收器
+dried-meat=风干肉
 blackhole-fuel=物质
 magic-furnace=奇点能源萃取器
 ht-locomotive=高科技机车MK1
 ht-generic-wagon=蓝坷垃悬浮货车
 nexelit-battery=蓝坷垃电池
-used-nexelit-battery=耗尽的蓝坷垃电池
+used-nexelit-battery=乏蓝坷垃电池
 
 [item-description]
-clay=就是粘土而已，产于粘土坑
-melamine=原发性聚合物
-melamine-resin=最基本的树脂
-ceramic=基础陶瓷
-capacitor1=第一代电容器
-capacitor2=很棒的多功能电容器，液体夹心，好吃！ 不过不要让他们鼓起来
-capacitor3=用于复杂PCB的多层陶瓷贴片电容器
-resistor1=第一代电阻器
-resistor2=厚膜电阻器，应用广泛
-resistor3=可以承受大电流而不会烧坏
-inductor1=第一代电感器
-inductor2=可爱的金属甜甜圈，不是广东人请不要尝试食用
-inductor3=采用小型SMD封装的高性能电感器
+clay=玩泥巴。
+melamine=初级聚合物。
+melamine-resin=最基本的树脂。
+ceramic=基础陶瓷。
+capacitor1=第一代电容器。
+capacitor2=强大的多功能电容器，具有美味的液体夹心！但记得别鼓包……
+capacitor3=用于复杂PCB的多层陶瓷片状电容器(MLCC)。
+resistor1=第一代电阻器，只适用于低功率的应用。
+resistor2=厚膜电阻器，适用于广泛的应用范围。
+resistor3=可承受大电流而不烧毁。
+inductor1=第一代电感器。
+inductor2=可爱的金属甜甜圈。但可能无法食用。
+inductor3=小型SMD封装的高性能电感器。
+vacuum-tube=具有热离子电子发射的能力。
 valve=第一代晶体管
 formica=基础压缩木材
 pcb1=第一代电路板
@@ -226,28 +238,28 @@ pdms=为特殊技术工作使用的凝胶
 nic-core=镍的基础芯心
 biopolymer=几种用途的先进材料.
 rf-gel=间苯二酚-甲醛凝胶
-kondo-substrate=制造强大的康多尔处理器的地方
+kondo-substrate=制造强大的近藤处理器的建筑
 heavy-fermion=非常规超导体
-kondo-processor=能每秒运行1pt的康多尔运算.
-ndfeb-alloy=钕铁硼合金.
-intelligent-unit=你能证明你的目的吗？
-zipir-carcass=它被仁慈地赐死.
-rayon=许多用途的高级纤维.
-nems=有着光明未来的纳米机器.
+kondo-processor=能每秒运行1PT的近藤运算
+ndfeb-alloy=钕铁硼合金
+intelligent-unit=你能证明你有自我意识吗？
+zipir-carcass=它被仁慈地赐死。
+rayon=多用途的高级纤维。
+nems=前景光明的纳米机器。
 yag-laser-module=钇铝石榴石晶体在固体激光器中的应用
 myoglobin=肌肉蛋白.
 pyrolytic-carbon=烧坏的石墨烯.
 blackhole-fuel=它没有。
 ht-locomotive=蓝坷垃动力机车
 nexelit-battery=特殊能源装置可为最现代化的运输系统提供动力。
-used-nexelit-battery=您的余额不足，请及时充值。
+used-nexelit-battery=没有能量了。
 
 [fluid-name]
 methane=甲烷
 methanal=甲醛
 ammonia=氨
 cyanic-acid=氰酸
-black-liquor=黑色液体
+black-liquor=黑液
 tall-oil=妥尔油
 benzene=苯
 phosphorous-acid=亚磷酸
@@ -257,21 +269,21 @@ propene=丙烯
 ethylene=乙烯
 ree-slurry=稀土泥浆
 ree-solution=稀土溶液
-cumene=异丙基苯
+cumene=异丙苯
 acetone=丙酮
-ech=环氧氯丙烷
+ech=ECH 环氧氯丙烷
 chloromethane=氯甲烷
 dimethyldichlorosilane=二甲基二氯硅烷
-dms=二甲基硫醚
-msa=甲磺酸
-bacteria-2=氢氧混合气细菌
+dms=DMS 二甲基硫醚
+msa=MSA 甲磺酸
+bacteria-2=氢氧混合细菌
 soaked-gel=浸泡凝胶
 acrolein=丙烯醛
 acetic-acid=乙酸
 raw-ralesia-extract=天然若雷莎萃取液
 ralesia-extract=若雷莎萃取液
-blood=血
-carbon-sulfide=硫化碳
+blood=血液
+carbon-sulfide=硫化羰
 etching=蚀刻剂
 nitrobenzene=硝基苯
 
@@ -279,82 +291,84 @@ nitrobenzene=硝基苯
 phosphate-rock=磷岩
 rare-earth-bolide=稀土陨石
 phosphate-mine=磷矿采掘机
-rare-earth-mine=稀土萃取机
-clay-pit-mk01=粘土坑 MK01
-clay-pit-mk02=粘土坑 MK02
-clay-pit-mk03=粘土坑 MK03
-clay-pit-mk04=粘土坑 MK04
-moondrop-greenhouse-mk01=月落草温室 MK01
-moondrop-greenhouse-mk02=月落草温室 MK02
-moondrop-greenhouse-mk03=月落草温室 MK03
-moondrop-greenhouse-mk04=月落草温室 MK04
-fbreactor-mk01=流化床反应器 MK01
-fbreactor-mk02=流化床反应器 MK02
-fbreactor-mk03=流化床反应器 MK03
-fbreactor-mk04=流化床反应器 MK04
-auog-paddock=奥格牧场
-electronics-factory-mk01=电子厂 MK01
-electronics-factory-mk02=电子厂 MK02
-electronics-factory-mk03=电子厂 MK03
-electronics-factory-mk04=电子厂 MK04
-pulp-mill-mk01=纸浆厂MK01
-pulp-mill-mk02=纸浆厂MK02
-pulp-mill-mk03=纸浆厂MK03
-pulp-mill-mk04=纸浆厂MK04
-pcb-factory-mk01=印制板厂 MK01
-pcb-factory-mk02=印制板厂 MK02
-pcb-factory-mk03=印制板厂 MK03
-pcb-factory-mk04=印制板厂 MK04
-chipshooter-mk01=射片机 MK01
-chipshooter-mk02=射片机 MK02
-chipshooter-mk03=射片机 MK03
-chipshooter-mk04=射片机 MK04
-nano-assembler-mk01=纳米装配 MK01
-nano-assembler-mk02=纳米装配 MK02
-nano-assembler-mk03=纳米装配 MK03
-nano-assembler-mk04=纳米装配 MK04
-cadaveric-arum-mk01=臭芋温室 MK01
-cadaveric-arum-mk02=臭芋温室 MK02
-cadaveric-arum-mk03=臭芋温室 MK03
-cadaveric-arum-mk04=臭芋温室 MK04
-kicalk-plantation=凯什克种植园
-zipir=基皮尔人工礁
+rare-earth-mine=稀土岩采掘机
+clay-pit-mk01=黏土坑MK1
+clay-pit-mk02=黏土坑MK2
+clay-pit-mk03=黏土坑MK3
+clay-pit-mk04=黏土坑MK4
+moondrop-greenhouse-mk01=月落草温室MK1
+moondrop-greenhouse-mk02=月落草温室MK2
+moondrop-greenhouse-mk03=月落草温室MK3
+moondrop-greenhouse-mk04=月落草温室MK4
+fbreactor-mk01=流化床反应器MK1
+fbreactor-mk02=流化床反应器MK2
+fbreactor-mk03=流化床反应器MK3
+fbreactor-mk04=流化床反应器MK4
+auog-paddock=剑背龟牧场
+electronics-factory-mk01=电子厂MK1
+electronics-factory-mk02=电子厂MK2
+electronics-factory-mk03=电子厂MK3
+electronics-factory-mk04=电子厂MK4
+pulp-mill-mk01=纸浆厂MK1
+pulp-mill-mk02=纸浆厂MK2
+pulp-mill-mk03=纸浆厂MK3
+pulp-mill-mk04=纸浆厂MK4
+pcb-factory-mk01=印制板厂MK1
+pcb-factory-mk02=印制板厂MK2
+pcb-factory-mk03=印制板厂MK3
+pcb-factory-mk04=印制板厂MK4
+chipshooter-mk01=射片机MK1
+chipshooter-mk02=射片机MK2
+chipshooter-mk03=射片机MK3
+chipshooter-mk04=射片机MK4
+nano-assembler-mk01=分子组装机MK1
+nano-assembler-mk02=分子组装机MK2
+nano-assembler-mk03=分子组装机MK3
+nano-assembler-mk04=分子组装机MK4
+cadaveric-arum-mk01=臭芋温室MK1
+cadaveric-arum-mk02=臭芋温室MK2
+cadaveric-arum-mk03=臭芋温室MK3
+cadaveric-arum-mk04=臭芋温室MK4
+kicalk-plantation=蒲公英种植园
+zipir=海蝎人工礁
 construction-robot-ht=高科技建设机器人
 logistic-robot-ht=高科技物流机器人
 quantum-computer=量子计算机
-particle-accelerator-mk01=粒子加速器 MK01
-particle-accelerator-mk02=粒子加速器 MK02
-particle-accelerator-mk03=粒子加速器 MK03
-particle-accelerator-mk04=粒子加速器 MK04
+particle-accelerator-mk01=粒子加速器MK1
+particle-accelerator-mk02=粒子加速器MK2
+particle-accelerator-mk03=粒子加速器MK3
+particle-accelerator-mk04=粒子加速器MK4
 blackhole=奇点能源萃取器
 magic-furnace=奇点能源萃取器
 ht-pipes=多用途管
 ht-pipes-to-ground=地下多用途管
-ht-locomotive=高科技机车MK1
+ht-locomotive=高科技机车
 ht-generic-wagon=蓝坷垃悬浮货车
 ht-generic-fluid-wagon=蓝坷垃悬浮液罐车
+crash-site-assembling-machine-1-repaired=坠毁飞船残留的组装机
+py-roboport-mk03=Py机器人指令平台MK3								  
 [entity-description]
-auog-paddock=被称为奥格的害羞的夜行生物。
+auog-paddock=被称为剑背龟的害羞的夜行生物。
 phosphate-rock=生物遗骸，挖掘其骨胳可提取出磷。
 rare-earth-bolide=来自太空的礼物。
 phosphate-mine=从含磷酸盐丰富的岩石中提取磷酸盐的机器。
 rare-earth-mine=从流星中提取所有稀土的机器。
-clay-pit-mk01=从地面混合和提取粘土的机器。
-clay-pit-mk02=从地面混合和提取粘土的机器。
-clay-pit-mk03=从地面混合和提取粘土的机器。
-clay-pit-mk04=从地面混合和提取粘土的机器。
-moondrop-greenhouse-mk01=种植月落草的地方，月落草的种植没有若雷莎那样苛刻，但是它的体积很大，你需要把温室也造的大一些，并通过遮光罩调节内部的照明。
-moondrop-greenhouse-mk02=种植月落草的地方——这是一种生产甲烷的外来植物。
-moondrop-greenhouse-mk03=种植月落草的地方——这是一种生产甲烷的外来植物。
-moondrop-greenhouse-mk04=种植月落草的地方——这是一种生产甲烷的外来植物。
+clay-pit-mk01=从地面调配和提取黏土的机器。
+clay-pit-mk02=从地面调配和提取黏土的机器。
+clay-pit-mk03=从地面调配和提取黏土的机器。
+clay-pit-mk04=从地面调配和提取黏土的机器。
+moondrop-greenhouse-mk01=种植月落草——一种生产甲烷的异星植物——的建筑。
+moondrop-greenhouse-mk02=种植月落草——一种生产甲烷的异星植物——的建筑。
+moondrop-greenhouse-mk03=种植月落草——一种生产甲烷的异星植物——的建筑。
+moondrop-greenhouse-mk04=种植月落草——一种生产甲烷的异星植物——的建筑。
 fbreactor-mk01=基础流化床反应器。
 fbreactor-mk02=基础流化床反应器。
 fbreactor-mk03=基础流化床反应器。
 fbreactor-mk04=基础流化床反应器。
-electronics-factory-mk01=制造电子元件的地方。
-electronics-factory-mk02=制造电子元件的地方。
-electronics-factory-mk03=制造电子元件的地方。
-electronics-factory-mk04=制造电子元件的地方。
+electronics-factory-mk01=制造电子元件的建筑。
+electronics-factory-mk02=制造电子元件的建筑。
+electronics-factory-mk03=制造电子元件的建筑。
+electronics-factory-mk04=制造电子元件的建筑。
 pulp-mill-mk01=进一步处理有机基固体。
 pulp-mill-mk02=进一步处理有机基固体。
 pulp-mill-mk03=进一步处理有机基固体。
@@ -367,18 +381,18 @@ chipshooter-mk01=高速元件装配。
 chipshooter-mk02=高速元件装配。
 chipshooter-mk03=高速元件装配。
 chipshooter-mk04=高速元件装配。
-nano-assembler-mk01=用于构建纳米机制和组件。
-nano-assembler-mk02=用于构建纳米机制和组件。
-nano-assembler-mk03=用于构建纳米机制和组件。
-nano-assembler-mk04=用于构建纳米机制和组件。
-cadaveric-arum-mk01=种植臭芋的温室, 这种恶臭的植物能生产含硫气体。
-cadaveric-arum-mk02=种植臭芋的温室, 这种恶臭的植物能生产含硫气体。
-cadaveric-arum-mk03=种植臭芋的温室, 这种恶臭的植物能生产含硫气体。
-cadaveric-arum-mk04=种植臭芋的温室, 这种恶臭的植物能生产含硫气体。
-kicalk-plantation=非常有用的蓬松树木，我们能从这里获取高质量的纤维.
+nano-assembler-mk01=建造纳米机械和组件的建筑。
+nano-assembler-mk02=建造纳米机械和组件的建筑。
+nano-assembler-mk03=建造纳米机械和组件的建筑。
+nano-assembler-mk04=建造纳米机械和组件的建筑。
+cadaveric-arum-mk01=种植能生产含硫气体的臭芋的温室。
+cadaveric-arum-mk02=种植能生产含硫气体的臭芋的温室。
+cadaveric-arum-mk03=种植能生产含硫气体的臭芋的温室。
+cadaveric-arum-mk04=种植能生产含硫气体的臭芋的温室。
+kicalk-plantation=非常有用的蓬松树木，我们能从这里获取高质量的纤维。
 logistic-robot-ht=高速，高载，低耗的高级物流机器人，满足您的各种需求。
 construction-robot-ht=高速，高载，低耗的高级建设机器人，满足您的各种需求。
-zipir=在干燥土地上养殖温和的基皮尔的场所。
+zipir=在干燥土地上养殖温和的海蝎的场所。
 quantum-computer=投资太空模拟，而不是发射火箭。
 particle-accelerator-mk01=离子注入与核合成。
 particle-accelerator-mk02=离子注入与核合成。
@@ -390,8 +404,12 @@ ht-generic-wagon=蓝坷垃加固货车
 ht-generic-fluid-wagon=蓝坷垃加固液罐车
 
 [technology-name]
+vacuum-tube-electronics=电子真空管							   
 basic-electronics=基础电子学
 advanced-electronics=高级电子学
+integrated-circuits-1=小型集成电路
+integrated-circuits-2=小中型集成电路
+integrated-circuits-3=大型集成电路
 semiconductor-doping=半导体掺杂
 rare-earth-tech=稀土技术
 graphene=石墨烯技术
@@ -402,39 +420,87 @@ quantum=量子计算
 penrose=彭罗斯过程
 nucleo=核合成
 ht-trains=高科技火车MK1
+auog=剑背龟
+kicalk=蒲公英
+moondrop=月落草
+biofilm=生物膜
+biopolymer=生物聚合物
+biotech=生物技术
+cadaveric-arum=臭芋
+carbon-nanotube=碳纳米管
+collagen=胶原
+colloidal-silica=胶体二氧化硅
+electronics-machines=高级电子机器
+epoxy=环氧树脂
+fertilizer=肥料
+fiberboard=纤维板
+fiberglass=玻璃纤维
+fluid-processing-machines=流体加工机
+ht-robotics=高科技机器人
+magnetic-core=磁芯
+melamine=三聚氰胺
+microfibers=超细纤维
+nems=纳米机电系统
+nenbit-matrix=蓝坷垃矩阵
+nitrobenzene=硝基苯
+nylon=尼龙
+paramagnetic-material=顺磁性材料
+parametric-oscilator=光参量振荡器
+phenol=苯酚
+phosphorous-processing=磷加工
+propene=丙烯
+rayon=人造丝
+re-magnet=钕磁铁
+supercapacitor=超级电容器
+superconductor=超导体
+zipir=海蝎
+zno-nanoparticles=氧化锌纳米粒子
+
+# new - please verify names are as desired
+fiberboard-mk02=纤维板2
+integrated-circuits=集成电路
+nucleo-mk02=核合成2
+nucleo-mk03=核合成3
+plastics-mk02=塑料2
+plastics-mk03=塑料3
+semiconductor-doping-mk02=半导体掺杂2
+ethylene=乙烯
+plastics-mk04=塑料4
+
+ceramic=陶瓷制品
 
 [technology-description]
-basic-electronics=解锁基本电子流程和组件.
-advanced-electronics=解锁高级电子流程和组件.
-semiconductor-doping=利用气相沉积技术解锁掺杂技术.
-rare-earth-tech=提供探索稀土元素的途径.
-graphene=解锁石墨烯技术和生产.
-nano-tech=解锁纳米组件和技术.
-aerogel=解锁气凝胶技术.
-earnshaw-theorem=利用引力场演绎经典的平方反比磁力.
-quantum=解锁量子技术和量子计算机.
-nucleo=由此，你将踏入一个危险的领域.
+vacuum-tube-electronics=解锁非常基本的基真空管的电路。
+basic-electronics=解锁基于晶体管的基本工艺和组件。
+advanced-electronics=解锁高级晶体管工艺和组件。
+advanced-electronics-2=解锁非常先进的晶体管工艺和组件。
+intergrated-circuits-1=早期的硅基电路，每个芯片只有几个晶体管。
+intergrated-circuits-2=具有数千个微型晶体管的更先进的电路。
+intergrated-circuits-3=高度先进的电路，拥有数百万个接近原子尺度的晶体管。
+semiconductor-doping=通过气相沉积解锁掺杂技术。
+rare-earth-tech=提供探索稀土元素的途径。
+graphene=解锁石墨烯技术和生产。
+nano-tech=解锁纳米组件和技术。
+aerogel=解锁气凝胶技术。
+earnshaw-theorem=引力场产生的经典平方反比磁力。
+quantum=解锁量子技术和量子计算机。
+nucleo=由此，你将踏入一个危险的领域。
 penrose=从旋转的黑洞中提取的终极能量。
 ht-trains=解锁效率更高的蓝坷垃动力火车。
 
 [tile-name]
 
 [ore-name]
-phosphate-rock=磷矿
+phosphate-rock=磷岩
 rare-earth-ore=稀土矿
 
 [autoplace-control-names]
-phosphate-rock=磷矿
-rare-earth-bolide=稀土陨石
+phosphate-rock=[img=entity.phosphate-rock] 磷岩
+rare-earth-bolide=[img=entity.rare-earth-bolide] 稀土矿
 
 [item-limitation]
-lick my balls=你在想peach
+lick my balls=这些不是你要找的插件
 
 [fuel-category-name]
 nexelit=蓝坷垃电池
-
-[mod-name]
-pyhightech=PY之高新科技
-
-[mod-description]
-pyhightech=强化和提高游戏中的高科技电子产品难度. 超过15个新建筑和100多个配方将增加您游戏的难度，特别是在电子部分，并重置了尖端科技包的整个生产流程. 与Bob电子冲突
+blackhole=物质粉碎者
