update chinese translation. credit sdqwo

--- a/locale/zh-CN/pyhightech.cfg
+++ b/locale/zh-CN/pyhightech.cfg
@@ -82,14 +82,14 @@ transistor=晶体管
 microchip=微晶片
 fiberboard=纤维板
 formica=塑料装饰板
-pcb1=印刷电路基板1
-pcb2=印刷电路基板2
-pcb3=印刷电路基板3
+pcb1=印刷电路基板1型
+pcb2=印刷电路基板2型
+pcb3=印刷电路基板3型
 pcb3-2=安装的电路基板
-pcb4=印刷电路基板4
-electronic-circuit=简易电路板1
-advanced-circuit=复杂电路板2
-processing-unit=高科技电路板3
+pcb4=印刷电路基板4型
+electronic-circuit=简易电路板
+advanced-circuit=复杂电路板
+processing-unit=高科技电路板
 powdered-phosphate-rock=磷矿粉
 light-n=轻掺杂N型半导体
 heavy-n=重掺杂N型半导体
@@ -108,7 +108,7 @@ crude-cermet=粗制含陶合金
 fecr-alloy=铬铁合金
 silicon=硅
 glass-fiber=玻璃纤维
-bisphenol-a=双酚 A
+bisphenol-a=双酚A
 epoxy=环氧树脂
 fiberglass=玻璃纤维板
 pdms=聚二甲基硅氧烷
@@ -130,15 +130,15 @@ biopolymer=生物高聚物
 carbon-nanotube=碳纳米管
 sodium-silicate=硅酸钠
 silica-powder=硅粉
-colloidal-silica=硅胶
+colloidal-silica=胶体二氧化硅
 nanochip=纳米芯片
 raw-fiber=粗纤维
 fiber=纤维
 micro-fiber=微纤维
 sub-denier-microfiber=次旦微纤维
 resorcinol=间苯二酚
-rf-gel=RF射频凝胶
-clean-rf-gel=清洁RF射频凝胶
+rf-gel=射频凝胶
+clean-rf-gel=清洁射频凝胶
 aerogel=气凝胶
 carbon-aerogel=碳气凝胶
 kondo-substrate=近藤基板
@@ -177,7 +177,7 @@ nylon=尼龙
 nylon-parts=尼龙零件
 collagen=胶原蛋白
 resilin=节肢弹性蛋白
-hyperelastic-material=超弹性物质
+hyperelastic-material=超弹性材料
 nano-wires=纳米线
 nems=纳米机电系统
 lithium-chloride=氯化锂
@@ -189,7 +189,7 @@ parametric-oscilator=光学参量振荡器
 myoglobin=肌红蛋白
 paramagnetic-material=顺磁材料
 diamagnetic-material=抗磁材料
-superconductor-servomechanims=超导体伺服机构
+superconductor-servomechanims=超导伺服机构
 harmonic-absorber=谐波吸收器
 pyrolytic-carbon=热解碳
 nv-center=氮空位中心
@@ -204,8 +204,8 @@ proton-donor=质子供体
 proton-receiver=质子接收器
 dried-meat=风干肉
 blackhole-fuel=物质
-magic-furnace=奇点能源萃取器
-ht-locomotive=高科技机车MK1
+magic-furnace=奇点能量提取器
+ht-locomotive=高科技机车 MK1
 ht-generic-wagon=蓝坷垃悬浮货车
 nexelit-battery=蓝坷垃电池
 used-nexelit-battery=乏蓝坷垃电池
@@ -232,17 +232,17 @@ circuit-board-1=第一代电路
 rare-earth-ore=比在地球上更珍贵
 rare-earth-powder=稀土生产的第一步
 rare-earth-dust=稀土生产的第二步
-bisphenol-a=远离你的身体
+bisphenol-a=远离您的身体
 epoxy=多用途树脂
 pdms=为特殊技术工作使用的凝胶
 nic-core=镍的基础芯心
 biopolymer=几种用途的先进材料.
 rf-gel=间苯二酚-甲醛凝胶
-kondo-substrate=制造强大的近藤处理器的建筑
+kondo-substrate=制造强大的近藤处理器的机器
 heavy-fermion=非常规超导体
 kondo-processor=能每秒运行1PT的近藤运算
 ndfeb-alloy=钕铁硼合金
-intelligent-unit=你能证明你有自我意识吗？
+intelligent-unit=您能证明您有自我意识吗？
 zipir-carcass=它被仁慈地赐死。
 rayon=多用途的高级纤维。
 nems=前景光明的纳米机器。
@@ -267,7 +267,7 @@ phosphoric-acid=磷酸
 phosphine-gas=磷化氢气体
 propene=丙烯
 ethylene=乙烯
-ree-slurry=稀土泥浆
+ree-slurry=稀土悬浮液
 ree-solution=稀土溶液
 cumene=异丙苯
 acetone=丙酮
@@ -290,125 +290,125 @@ nitrobenzene=硝基苯
 [entity-name]
 phosphate-rock=磷岩
 rare-earth-bolide=稀土陨石
-phosphate-mine=磷矿采掘机
-rare-earth-mine=稀土岩采掘机
-clay-pit-mk01=黏土坑MK1
-clay-pit-mk02=黏土坑MK2
-clay-pit-mk03=黏土坑MK3
-clay-pit-mk04=黏土坑MK4
-moondrop-greenhouse-mk01=月落草温室MK1
-moondrop-greenhouse-mk02=月落草温室MK2
-moondrop-greenhouse-mk03=月落草温室MK3
-moondrop-greenhouse-mk04=月落草温室MK4
-fbreactor-mk01=流化床反应器MK1
-fbreactor-mk02=流化床反应器MK2
-fbreactor-mk03=流化床反应器MK3
-fbreactor-mk04=流化床反应器MK4
+phosphate-mine=磷岩采矿机
+rare-earth-mine=稀土岩采矿机
+clay-pit-mk01=黏土坑 MK1
+clay-pit-mk02=黏土坑 MK2
+clay-pit-mk03=黏土坑 MK3
+clay-pit-mk04=黏土坑 MK4
+moondrop-greenhouse-mk01=月落草温室 MK1
+moondrop-greenhouse-mk02=月落草温室 MK2
+moondrop-greenhouse-mk03=月落草温室 MK3
+moondrop-greenhouse-mk04=月落草温室 MK4
+fbreactor-mk01=流化床反应器 MK1
+fbreactor-mk02=流化床反应器 MK2
+fbreactor-mk03=流化床反应器 MK3
+fbreactor-mk04=流化床反应器 MK4
 auog-paddock=剑背龟牧场
-electronics-factory-mk01=电子厂MK1
-electronics-factory-mk02=电子厂MK2
-electronics-factory-mk03=电子厂MK3
-electronics-factory-mk04=电子厂MK4
-pulp-mill-mk01=纸浆厂MK1
-pulp-mill-mk02=纸浆厂MK2
-pulp-mill-mk03=纸浆厂MK3
-pulp-mill-mk04=纸浆厂MK4
-pcb-factory-mk01=印制板厂MK1
-pcb-factory-mk02=印制板厂MK2
-pcb-factory-mk03=印制板厂MK3
-pcb-factory-mk04=印制板厂MK4
-chipshooter-mk01=射片机MK1
-chipshooter-mk02=射片机MK2
-chipshooter-mk03=射片机MK3
-chipshooter-mk04=射片机MK4
-nano-assembler-mk01=分子组装机MK1
-nano-assembler-mk02=分子组装机MK2
-nano-assembler-mk03=分子组装机MK3
-nano-assembler-mk04=分子组装机MK4
-cadaveric-arum-mk01=臭芋温室MK1
-cadaveric-arum-mk02=臭芋温室MK2
-cadaveric-arum-mk03=臭芋温室MK3
-cadaveric-arum-mk04=臭芋温室MK4
+electronics-factory-mk01=电子厂 MK1
+electronics-factory-mk02=电子厂 MK2
+electronics-factory-mk03=电子厂 MK3
+electronics-factory-mk04=电子厂 MK4
+pulp-mill-mk01=纸浆厂 MK1
+pulp-mill-mk02=纸浆厂 MK2
+pulp-mill-mk03=纸浆厂 MK3
+pulp-mill-mk04=纸浆厂 MK4
+pcb-factory-mk01=印制电路板厂 MK1
+pcb-factory-mk02=印制电路板厂 MK2
+pcb-factory-mk03=印制电路板厂 MK3
+pcb-factory-mk04=印制电路板厂 MK4
+chipshooter-mk01=射片机 MK1
+chipshooter-mk02=射片机 MK2
+chipshooter-mk03=射片机 MK3
+chipshooter-mk04=射片机 MK4
+nano-assembler-mk01=分子组装机 MK1
+nano-assembler-mk02=分子组装机 MK2
+nano-assembler-mk03=分子组装机 MK3
+nano-assembler-mk04=分子组装机 MK4
+cadaveric-arum-mk01=臭芋温室 MK1
+cadaveric-arum-mk02=臭芋温室 MK2
+cadaveric-arum-mk03=臭芋温室 MK3
+cadaveric-arum-mk04=臭芋温室 MK4
 kicalk-plantation=蒲公英种植园
 zipir=海蝎人工礁
 construction-robot-ht=高科技建设机器人
 logistic-robot-ht=高科技物流机器人
 quantum-computer=量子计算机
-particle-accelerator-mk01=粒子加速器MK1
-particle-accelerator-mk02=粒子加速器MK2
-particle-accelerator-mk03=粒子加速器MK3
-particle-accelerator-mk04=粒子加速器MK4
+particle-accelerator-mk01=粒子加速器 MK1
+particle-accelerator-mk02=粒子加速器 MK2
+particle-accelerator-mk03=粒子加速器 MK3
+particle-accelerator-mk04=粒子加速器 MK4
 blackhole=奇点能源萃取器
-magic-furnace=奇点能源萃取器
-ht-pipes=多用途管
-ht-pipes-to-ground=地下多用途管
-ht-locomotive=高科技机车
-ht-generic-wagon=蓝坷垃悬浮货车
-ht-generic-fluid-wagon=蓝坷垃悬浮液罐车
+magic-furnace=奇点能量提取器
+ht-pipes=通用管
+ht-pipes-to-ground=地下通用管
+ht-locomotive=高科技悬浮列车
+ht-generic-wagon=蓝坷垃悬浮货运车厢
+ht-generic-fluid-wagon=蓝坷垃悬浮液罐车厢
 crash-site-assembling-machine-1-repaired=坠毁飞船残留的组装机
-py-roboport-mk03=Py机器人指令平台MK3								  
+py-roboport-mk03=Py机器人指令平台 MK3								  
 [entity-description]
 auog-paddock=被称为剑背龟的害羞的夜行生物。
-phosphate-rock=生物遗骸，挖掘其骨胳可提取出磷。
+phosphate-rock=古代生命的遗迹。
 rare-earth-bolide=来自太空的礼物。
-phosphate-mine=从含磷酸盐丰富的岩石中提取磷酸盐的机器。
-rare-earth-mine=从流星中提取所有稀土的机器。
+phosphate-mine=从富含磷酸盐的岩石中提取磷酸盐的机器。
+rare-earth-mine=从陨石中开采稀土的机器。
 clay-pit-mk01=从地面调配和提取黏土的机器。
 clay-pit-mk02=从地面调配和提取黏土的机器。
 clay-pit-mk03=从地面调配和提取黏土的机器。
 clay-pit-mk04=从地面调配和提取黏土的机器。
-moondrop-greenhouse-mk01=种植月落草——一种生产甲烷的异星植物——的建筑。
-moondrop-greenhouse-mk02=种植月落草——一种生产甲烷的异星植物——的建筑。
-moondrop-greenhouse-mk03=种植月落草——一种生产甲烷的异星植物——的建筑。
-moondrop-greenhouse-mk04=种植月落草——一种生产甲烷的异星植物——的建筑。
+moondrop-greenhouse-mk01=种植月落草（一种生产甲烷的异星植物）的建筑。
+moondrop-greenhouse-mk02=种植月落草（一种生产甲烷的异星植物）的建筑。
+moondrop-greenhouse-mk03=种植月落草（一种生产甲烷的异星植物）的建筑。
+moondrop-greenhouse-mk04=种植月落草（一种生产甲烷的异星植物）的建筑。
 fbreactor-mk01=基础流化床反应器。
 fbreactor-mk02=基础流化床反应器。
 fbreactor-mk03=基础流化床反应器。
 fbreactor-mk04=基础流化床反应器。
-electronics-factory-mk01=制造电子元件的建筑。
-electronics-factory-mk02=制造电子元件的建筑。
-electronics-factory-mk03=制造电子元件的建筑。
-electronics-factory-mk04=制造电子元件的建筑。
-pulp-mill-mk01=进一步处理有机基固体。
-pulp-mill-mk02=进一步处理有机基固体。
-pulp-mill-mk03=进一步处理有机基固体。
-pulp-mill-mk04=进一步处理有机基固体。
-pcb-factory-mk01=自动化印制电路板装配机。
-pcb-factory-mk02=自动化印制电路板装配机。
-pcb-factory-mk03=自动化印制电路板装配机。
-pcb-factory-mk04=自动化印制电路板装配机。
-chipshooter-mk01=高速元件装配。
-chipshooter-mk02=高速元件装配。
-chipshooter-mk03=高速元件装配。
-chipshooter-mk04=高速元件装配。
-nano-assembler-mk01=建造纳米机械和组件的建筑。
-nano-assembler-mk02=建造纳米机械和组件的建筑。
-nano-assembler-mk03=建造纳米机械和组件的建筑。
-nano-assembler-mk04=建造纳米机械和组件的建筑。
+electronics-factory-mk01=制造电子元件的机器。
+electronics-factory-mk02=制造电子元件的机器。
+electronics-factory-mk03=制造电子元件的机器。
+electronics-factory-mk04=制造电子元件的机器。
+pulp-mill-mk01=有机固体的再加工。
+pulp-mill-mk02=有机固体的再加工。
+pulp-mill-mk03=有机固体的再加工。
+pulp-mill-mk04=有机固体的再加工。
+pcb-factory-mk01=自动化印制电路板组装机。
+pcb-factory-mk02=自动化印制电路板组装机。
+pcb-factory-mk03=自动化印制电路板组装机。
+pcb-factory-mk04=自动化印制电路板组装机。
+chipshooter-mk01=高速元件组装。
+chipshooter-mk02=高速元件组装。
+chipshooter-mk03=高速元件组装。
+chipshooter-mk04=高速元件组装。
+nano-assembler-mk01=制作纳米机械和组件的机器。
+nano-assembler-mk02=制作纳米机械和组件的机器。
+nano-assembler-mk03=制作纳米机械和组件的机器。
+nano-assembler-mk04=制作纳米机械和组件的机器。
 cadaveric-arum-mk01=种植能生产含硫气体的臭芋的温室。
 cadaveric-arum-mk02=种植能生产含硫气体的臭芋的温室。
 cadaveric-arum-mk03=种植能生产含硫气体的臭芋的温室。
 cadaveric-arum-mk04=种植能生产含硫气体的臭芋的温室。
 kicalk-plantation=非常有用的蓬松树木，我们能从这里获取高质量的纤维。
-logistic-robot-ht=高速，高载，低耗的高级物流机器人，满足您的各种需求。
-construction-robot-ht=高速，高载，低耗的高级建设机器人，满足您的各种需求。
-zipir=在干燥土地上养殖温和的海蝎的场所。
-quantum-computer=投资太空模拟，而不是发射火箭。
+logistic-robot-ht=快速、高载荷、低功耗的高级物流机器人，满足您的各种需求。
+construction-robot-ht=快速、高载荷、低功耗的高级建设机器人，满足您的各种需求。
+zipir=在干燥土地上养殖温顺海蝎的场所。
+quantum-computer=投资太空模拟，而非发射火箭。
 particle-accelerator-mk01=离子注入与核合成。
 particle-accelerator-mk02=离子注入与核合成。
 particle-accelerator-mk03=离子注入与核合成。
 particle-accelerator-mk04=离子注入与核合成。
-blackhole=创造一个微型黑洞来从奇点中提取旋转能量。使用插入器或装载器使其与任何物质保持接触。
-ht-locomotive=蓝坷垃动力驱动的火车
-ht-generic-wagon=蓝坷垃加固货车
-ht-generic-fluid-wagon=蓝坷垃加固液罐车
+blackhole=创造一个微型黑洞来从奇点中提取旋转能量。使用[color=green]机械臂或装卸机[/color]向其输送任何物质。
+ht-locomotive=蓝坷垃动力列车。
+ht-generic-wagon=蓝坷垃加固货运车厢。
+ht-generic-fluid-wagon=蓝坷垃加固液罐车厢。
 
 [technology-name]
-vacuum-tube-electronics=电子真空管							   
+vacuum-tube-electronics=真空管电子学						   
 basic-electronics=基础电子学
 advanced-electronics=高级电子学
 integrated-circuits-1=小型集成电路
-integrated-circuits-2=小中型集成电路
+integrated-circuits-2=中型集成电路
 integrated-circuits-3=大型集成电路
 semiconductor-doping=半导体掺杂
 rare-earth-tech=稀土技术
@@ -419,7 +419,7 @@ earnshaw-theorem=恩绍定理
 quantum=量子计算
 penrose=彭罗斯过程
 nucleo=核合成
-ht-trains=高科技火车MK1
+ht-trains=高科技列车 MK1
 auog=剑背龟
 kicalk=蒲公英
 moondrop=月落草
@@ -444,7 +444,7 @@ nems=纳米机电系统
 nenbit-matrix=蓝坷垃矩阵
 nitrobenzene=硝基苯
 nylon=尼龙
-paramagnetic-material=顺磁性材料
+paramagnetic-material=顺磁材料
 parametric-oscilator=光参量振荡器
 phenol=苯酚
 phosphorous-processing=磷加工
@@ -454,7 +454,7 @@ re-magnet=钕磁铁
 supercapacitor=超级电容器
 superconductor=超导体
 zipir=海蝎
-zno-nanoparticles=氧化锌纳米粒子
+zno-nanoparticles=氧化锌纳米颗粒
 
 # new - please verify names are as desired
 fiberboard-mk02=纤维板2
@@ -484,9 +484,9 @@ nano-tech=解锁纳米组件和技术。
 aerogel=解锁气凝胶技术。
 earnshaw-theorem=引力场产生的经典平方反比磁力。
 quantum=解锁量子技术和量子计算机。
-nucleo=由此，你将踏入一个危险的领域。
+nucleo=由此，您将踏入一个危险的领域。
 penrose=从旋转的黑洞中提取的终极能量。
-ht-trains=解锁效率更高的蓝坷垃动力火车。
+ht-trains=解锁效率更高的蓝坷垃动力列车。
 
 [tile-name]
 
@@ -499,7 +499,7 @@ phosphate-rock=[img=entity.phosphate-rock] 磷岩
 rare-earth-bolide=[img=entity.rare-earth-bolide] 稀土矿
 
 [item-limitation]
-lick my balls=这些不是你要找的插件
+lick my balls=这些不是您要找的插件
 
 [fuel-category-name]
 nexelit=蓝坷垃电池
