down with the ilica

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -417,7 +417,7 @@ biotech=Biotech
 cadaveric-arum=Cadaveric arum
 carbon-nanotube=Carbon nanotube
 collagen=Collagen
-colloidal-silica=Colloidal ilica
+colloidal-silica=Colloidal silica
 electronics-machines=Advanced electronics machines
 epoxy=Epoxy
 fertilizer=Fertilizer
