Improved the description for phosphate deposits. (https://github.com/pyanodon/pybugreports/issues/411)

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -337,7 +337,8 @@ crash-site-assembling-machine-1-repaired=Crashed ship assembler
 py-roboport-mk03=Py roboport MK 03
 [entity-description]
 auog-paddock=Shy night creatures known as aougs.
-phosphate-rock=Remains of ancient life.
+phosphate-rock=A small deposit full of the skeletal remains of ancient life. Requires a small phosphate mine to extract the phosphate rock.
+phosphate-rock-02=The massive preserved remains of an ancient creature. Consider yourself lucky that these creatures went extinct long ago. Requires a big phosphate mine to extract the phosphate rock.
 rare-earth-bolide=A gift from the sky.
 phosphate-mine=A building to extract phosphate from phosphate-rich rocks.
 rare-earth-mine=A building to extract all the rare-earth resources in the bolide.
