NdFeB -> Neodymium ferroboron

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -145,8 +145,8 @@ zinc-nanocompound=Zinc nanocompound
 zinc-nanocomplex=Zinc nanocomplex
 zno-nanoparticles=Zinc oxide nanoparticles
 csle-diode=Cross-section light emitting diode
-ndfeb-alloy=NdFeB alloy
-ndfeb-powder=NdFeB powder
+ndfeb-alloy=Neodymium ferroboron alloy
+ndfeb-powder=Neodymium ferroboron powder
 re-magnet=Neodymium magnet
 sc-substrate=Superconductor substrate
 superconductor=Superconductor
