RU locale update for PyHT 2.0.17 (#82) (#84)
Co-authored-by: Shadow_Man <56026280+Astorin@users.noreply.github.com>

--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -142,8 +142,8 @@ zinc-nanocompound=Наносоединения цинка
 zinc-nanocomplex=Цинковый нанокомплекс
 zno-nanoparticles=Наночастицы оксида цинка
 csle-diode=Цилиндрический светодиод
-ndfeb-alloy=Магнитный сплав
-ndfeb-powder=Магнитный порошок
+ndfeb-alloy=Неодимовый магнитный сплав
+ndfeb-powder=Неодимовый магнитный порошок
 re-magnet=Неодимовый магнит
 sc-substrate=Сверхпроводниковая подложка
 superconductor=Сверхпроводник
@@ -225,7 +225,7 @@ rf-gel=Резерцин-формальдегидный гель.
 kondo-substrate=Место для постройки мощного кондо-процессора
 kondo-processor=Умеет делать одно кондо-вычисление в секунду.
 heavy-fermion=Нетрадиционный сверхпроводник.
-ndfeb-alloy=Сплав ниобия, бора и железа.
+ndfeb-alloy=Сплав неодима, бора и железа.
 intelligent-unit=Можешь ли ты доказать, что обладаешь самосознанием?
 zipir-carcass=Милосердно убитый
 rayon=Усовершенствованное волокно с множеством применений.
