updated UK locale

--- a/locale/uk/locale.cfg
+++ b/locale/uk/locale.cfg
@@ -292,7 +292,7 @@ fbreactor-mk01=Реактор псевдозрідження 1
 fbreactor-mk02=Реактор псевдозрідження 2
 fbreactor-mk03=Реактор псевдозрідження 3
 fbreactor-mk04=Реактор псевдозрідження 4
-auog-paddock=Загін Оґів
+auog-paddock=Загін Огів
 electronics-factory-mk01=Завод електроніки 1
 electronics-factory-mk02=Завод електроніки 2
 electronics-factory-mk03=Завод електроніки 3
@@ -336,7 +336,7 @@ ht-generic-fluid-wagon=Некселітовий вагон-цистерна на
 crash-site-assembling-machine-1-repaired=Складальний автомат корабля, що розбився
 py-roboport-mk03=Py робопорт 1
 [entity-description]
-auog-paddock=Сором'язливі нічні істоти, відомі як Оґи.
+auog-paddock=Сором'язливі нічні істоти, відомі як Оги.
 phosphate-rock=Невелике родовище, повне скелетних залишків стародавнього життя. Для видобутку фосфоритної породи використовуйте малий фосфатовий бур.
 phosphate-rock-02=Масивні збережені останки стародавньої істоти. Вважайте, що вам пощастило, що ці істоти давно вимерли. Для видобутку з цієї фосфоритної породи використовуйте великий фосфатовий бур.
 rare-earth-bolide=Подарунок небес.
@@ -409,13 +409,13 @@ quantum=Квантові обчислення
 penrose=Процес Пенроуза
 nucleo=Нуклеосинтез
 ht-trains=Високотехнологічні потяги 1
-auog=Оґ
-kicalk=Кікалк
+auog=Ог
+kicalk=Кікалка
 moondrop=Місячнокрапля
 biofilm=Біоплівка
 biopolymer=Біополімер
 biotech=Біотех
-cadaveric-arum=Трупний аронник
+cadaveric-arum=Трупний Аронник
 carbon-nanotube=Вуглецеві нанотрубки
 collagen=Колаген
 colloidal-silica=Колоїдний кремнезем
