Standardized the internal names of the mk01-mk04 flying robots to `py-logistic-robot-mk0X` and `py-construction-robot-mk0X`. Resolves https://github.com/pyanodon/pybugreports/issues/585

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -277,8 +277,8 @@ nano-assembler=Nano-Assembler
 cadaveric-arum=Leichenarum-Gewächshaus
 kicalk-plantation=Kicalk-Plantage
 zipir=Künstliches Zipir-Riff
-construction-robot-ht=Hightech-Konstruktionspyanobot
-logistic-robot-ht=Hightech-Logistikpyanobot
+py-construction-robot-mk04=Hightech-Konstruktionspyanobot
+py-logistic-robot-mk04=Hightech-Logistikpyanobot
 quantum-computer=Quantencomputer
 particle-accelerator=Teilchenbeschleuniger
 blackhole=Singularitätsenergieextraktor
@@ -300,8 +300,8 @@ chipshooter=Hochgeschwindigkeitsleiterplattenbestückung.
 nano-assembler=Die Maschine für alles, das im mikroskopisch Kleinen produziert werden muss.
 cadaveric-arum=Ein Gewächshaus für Pflanzen, die Schwefelgase ausstoßen.
 kicalk-plantation=Nützliche, fluffige Bäume für feinste Qualitätsfasern.
-logistic-robot-ht=Der einzig wahre Logistikroboter.
-construction-robot-ht=Der einzig wahre Bauroboter.
+py-logistic-robot-mk04=Der einzig wahre Logistikroboter.
+py-construction-robot-mk04=Der einzig wahre Bauroboter.
 zipir=Hier werden Zipirs gezüchtet.
 quantum-computer=Die Matrix für alle Raketenwissenschaftler.
 particle-accelerator=Der Teilchenbeschleuniger für Jedermann.
