--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -319,8 +319,8 @@ cadaveric-arum-mk03=Cadaveric arum greenhouse MK 03
 cadaveric-arum-mk04=Cadaveric arum greenhouse MK 04
 kicalk-plantation=Kicalk plantation
 zipir=Zipir Artificial reef
-construction-robot-ht=High-tech construction pynobot
-logistic-robot-ht=High-tech logistic pynobot
+py-construction-robot-mk04=Construction pynobot MK 04
+py-logistic-robot-mk04=Logistic pynobot MK 04
 quantum-computer=Quantum computer
 particle-accelerator-mk01=Particle accelerator MK 01
 particle-accelerator-mk02=Particle accelerator MK 02
@@ -379,8 +379,8 @@ cadaveric-arum-mk02=A greenhouse to grow the cadaveric arums, a smelly plant whi
 cadaveric-arum-mk03=A greenhouse to grow the cadaveric arums, a smelly plant which produces sulfur-based gases.
 cadaveric-arum-mk04=A greenhouse to grow the cadaveric arums, a smelly plant which produces sulfur-based gases.
 kicalk-plantation=Very useful FLUFFY trees which provide high-quality fibers.
-logistic-robot-ht=A high-speed, high-cargo, low-energy advanced logistic robot to satisfy all your needs.
-construction-robot-ht=A high-speed, high-cargo, low energy advanced construction robot to satisfy all your needs.
+py-logistic-robot-mk04=A high-speed, high-cargo, low-energy advanced logistic robot to satisfy all your needs.
+py-construction-robot-mk04=A high-speed, high-cargo, low energy advanced construction robot to satisfy all your needs.
 zipir=A place to raise the peaceful Zipirs on dry land.
 quantum-computer=Invest into space simulation instead of sending rockets.
 particle-accelerator-mk01=Ion implementation and nucleosynthesis.
