--- a/locale/zh-CN/pyhightech.cfg
+++ b/locale/zh-CN/pyhightech.cfg
@@ -331,8 +331,8 @@ cadaveric-arum-mk03=臭芋温室 MK3
 cadaveric-arum-mk04=臭芋温室 MK4
 kicalk-plantation=蒲公英种植园
 zipir=海蝎人工礁
-construction-robot-ht=高科技建设机器人
-logistic-robot-ht=高科技物流机器人
+py-construction-robot-mk04=高科技建设机器人
+py-logistic-robot-mk04=高科技物流机器人
 quantum-computer=量子计算机
 particle-accelerator-mk01=粒子加速器 MK1
 particle-accelerator-mk02=粒子加速器 MK2
@@ -390,8 +390,8 @@ cadaveric-arum-mk02=种植能生产含硫气体的臭芋的温室。
 cadaveric-arum-mk03=种植能生产含硫气体的臭芋的温室。
 cadaveric-arum-mk04=种植能生产含硫气体的臭芋的温室。
 kicalk-plantation=非常有用的蓬松树木，我们能从这里获取高质量的纤维。
-logistic-robot-ht=快速、高载荷、低功耗的高级物流机器人，满足您的各种需求。
-construction-robot-ht=快速、高载荷、低功耗的高级建设机器人，满足您的各种需求。
+py-logistic-robot-mk04=快速、高载荷、低功耗的高级物流机器人，满足您的各种需求。
+py-construction-robot-mk04=快速、高载荷、低功耗的高级建设机器人，满足您的各种需求。
 zipir=在干燥土地上养殖温顺海蝎的场所。
 quantum-computer=投资太空模拟，而非发射火箭。
 particle-accelerator-mk01=离子注入与核合成。
