Fixed locale to be third generation instead of first generation

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -209,7 +209,7 @@ capacitor2=Great multipurpose capacitors, with a delicious liquid center! Don't 
 capacitor3=Multilayer ceramic chip capacitors (MLCC) for complex PCBs.
 resistor1=Can withstand high currents without burning out.
 resistor2=Thick film resistors, suitable for use in a wide range of applications.
-resistor3=First generation resistors, suitable for low-power applications only.
+resistor3=Third generation resistors, suitable for low-power applications only.
 inductor1=First generation inductors.
 inductor2=Cute metal donuts. May be inedible though.
 inductor3=High-performance inductors in a small SMD package.
