Locale description mix up, fixes #541 in pybugreports (#90)
* Locale description mix up, fixes #541 in pybugreports

* Added changes into the changelog

* Fixed locale to be third generation instead of first generation

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -207,9 +207,9 @@ ceramic=Basic ceramic.
 capacitor1=First generation capacitors.
 capacitor2=Great multipurpose capacitors, with a delicious liquid center! Don't let them bulge though...
 capacitor3=Multilayer ceramic chip capacitors (MLCC) for complex PCBs.
-resistor1=First generation resistors, suitable for low-power applications only.
+resistor1=Can withstand high currents without burning out.
 resistor2=Thick film resistors, suitable for use in a wide range of applications.
-resistor3=Can withstand high currents without burning out.
+resistor3=Third generation resistors, suitable for low-power applications only.
 inductor1=First generation inductors.
 inductor2=Cute metal donuts. May be inedible though.
 inductor3=High-performance inductors in a small SMD package.
