RU locale update for PyHT 3.0.8

--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -208,9 +208,9 @@ inductor3=Высокопроизводительные катушки индук
 capacitor1=Первое поколение конденсаторов.
 capacitor2=Отличные многоцелевые конденсаторы с прекрасным жидким центром! Не позволяйте им вспучиваться...
 capacitor3=Многослойные керамические чиповые конденсаторы для сложных схем.
-resistor1=Резисторы первого поколения, подходящие только для маломощных приложений.
+resistor1=Выдерживают большие токи и не перегорают.
 resistor2=Толстоплёночные резисторы, подходящие для использования в широком диапазоне приложений.
-resistor3=Выдерживают большие токи без перегорания.
+resistor3=Резисторы третьего поколения, подходящие только для маломощных устройств.
 vacuum-tube=Благословлена силой термоэлектронной эмиссии электронов.
 formica=Спрессованная древесина.
 pcb1=Первое поколение печатных плат.
